--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background-color: var(--text-color);
+    color: var(--text-color);
 }
 a {
     color: var(--text-color);
