--- a/0x02-CSS_advanced/styles/6-style.css
+++ b/0x02-CSS_advanced/styles/6-style.css
@@ -12,39 +12,40 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    --font-weight-regular: 800;
+    --font-weight-regular: 400;
     --font-weight-bold: 700;
-}
 
-html {
+  }
+
+  html {
     scroll-behavior: smooth;
     font-size: 62.5%;
-}
+  }
 
-body {
+  body {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
-}
+  }
 
-h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
-    font-family: var(--font-weight-bold);
-}
+    font-weight: var(--font-weight-bold);
+  }
 
-a {
+  a {
     color: #161616;
-}
+  }
 
-.visually-hidden {
+  .visually-hidden {
     display: none;
-}
+  }
 
-.card-category {
+  .card-category {
     color: var(--color-primary);
-}
+  }
 
-.section-tagline {
+  .section-tagline {
     color: var(--color-primary);
-}
+  }
